# dependency-cascade

./: Cargo.toml  Dockerfile  README.md  action.yaml
.github/actions/query-simple/: action.yml
.github/workflows/: rust-test.yml
example/: README.md
src/: commands.rs  main.rs
src/commands/: mod.rs  prepare.rs  query.rs
src/types/: graph.rs  mod.rs  node.rs
test/test_end2end/: dependencies.toml
test/test_lib/: dependencies.toml
test/test_service/: dependencies.toml
